--- a/package.json
+++ b/package.json
@@ -27,16 +27,18 @@
     "@types/eslint": "8.4.10",
     "@types/node": "^18.11.18",
     "@types/node-fetch": "^2.6.2",
-    "@typescript-eslint/eslint-plugin": "5.49.0",
-    "@typescript-eslint/parser": "5.49.0",
+    "@typescript-eslint/eslint-plugin": "5.50.0",
+    "@typescript-eslint/parser": "5.50.0",
+    "@vanilla-extract/css": "^1.9.3",
     "eslint": "8.33.0",
     "eslint-plugin-qwik": "0.16.2",
     "node-fetch": "3.3.0",
     "prettier": "2.8.3",
-    "typescript": "4.9.4",
+    "styled-vanilla-extract": "^0.5.4",
+    "typescript": "4.9.5",
     "undici": "5.16.0",
     "vite": "4.0.4",
     "vite-tsconfig-paths": "4.0.5",
-    "wrangler": "latest"
+    "wrangler": "^2.9.0"
   }
 }
